# dw-simulator

./: .gitignore  Makefile  QUERY_REWRITING_SPEC.md  README.md  docker-compose.yml
.github/workflows/: README.md  ci.yml
docs/: ai.md  complete.md  product-spec.md  status.md  tech-spec.md
docs/examples/: README.md
docs/examples/ddl/: customers_redshift.sql  products_ansi.sql  products_snowflake.sql
docs/examples/queries/: README.md  ecommerce_01_customer_metrics.sql  ecommerce_02_product_performance.sql  ecommerce_03_monthly_revenue.sql  ecommerce_04_customer_cohorts.sql  ecommerce_05_cart_analysis.sql  marketing_01_campaign_performance.sql  marketing_05_time_series.sql
docs/examples/schemas/: complex.json  data_container.json  ecommerce.json  marketing.json  (+4 more)
scripts/: README.md  customers_ansi.sql  orders_ansi.sql  orders_snowflake.sql
services/data-loader/: README.md
services/dw-simulator/: .dockerignore  =23.0  Dockerfile  Dockerfile.test  README.md  pyproject.toml
services/dw-simulator/src/dw_simulator/: __init__.py  api.py  cli.py  config.py  generator.py  lineage.py  persistence.py  query_rewriter.py  s3_client.py  schema.py  service.py  sql_importer.py
services/dw-simulator/tests/: conftest.py  test_api.py  test_cli.py  test_complex_schema_integration.py  test_config.py  test_e2e_warehouses.py  test_generator.py  test_integration.py  test_lineage.py  test_persistence.py  test_query_rewriter.py  test_s3_client.py  test_schema.py  test_service.py  test_sql_importer.py  test_version.py
services/web-ui/: README.md  index.html  main.js  styles.css
(+33 files in other folders)
