[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dw-simulator"
version = "0.1.0"
description = "Local synthetic data warehouse simulator"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Data Warehouse Simulator Team" }]
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.5",
    "SQLAlchemy>=2.0",
    "psycopg2-binary>=2.9",
    "Faker>=19.6",
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "sqlglot>=23.0",
    "boto3>=1.34"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "httpx>=0.27"
]

[project.scripts]
dw-sim = "dw_simulator.cli:app"

[tool.pytest.ini_options]
addopts = "--cov=dw_simulator --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pandas>=2.3.3",
]
